# hippotross_server

./: Cargo.toml  README.md
assets/configs/: Config.hip.toml  Config.toml
benchmarks/: prompts.txt  run-benchmark-cached.sh  run-benchmark-parallel.sh  run-benchmark.sh
crates/ai00-core/: Cargo.toml
crates/ai00-core/src/: hip_state.rs  lib.rs  reload.rs  run.rs
crates/ai00-core/src/sampler/: bnf.rs
crates/ai00-server/: Cargo.toml
crates/ai00-server/src/: config.rs  lib.rs  logging.rs  main.rs
crates/ai00-server/src/api/: auth.rs  error.rs  file.rs  mod.rs  request_id.rs
crates/ai00-server/src/api/messages/: bnf_generator.rs  bnf_grammars.rs  handler.rs  mod.rs  prompt.rs  streaming.rs  thinking_extractor.rs  tool_parser.rs  types.rs
crates/ai00-server/src/api/oai/: chat.rs  info.rs
crates/ai00-server/tests/: bnf_integration_test.rs  messages_api_test.rs  prompt_demo_test.rs  smoke.rs
crates/ai00-server/tests/common/: mocks.rs  mod.rs
crates/make-binidx/: Cargo.toml  Makefile  README.md  toucan_to_messages.py
crates/make-binidx/src/: binidx.rs  main.rs
crates/make-binidx/test_data/: sample_requests.jsonl
crates/make-binidx/tests/: cli_test.rs
docs/: benchmarking.md  bnf-grammar.md  logging.md  rwkv_goose_chat_format.md
