[package]
name = "make-binidx"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI tool to convert JSONL message requests to RWKV binidx format"
repository.workspace = true

[[bin]]
name = "make-binidx"
path = "src/main.rs"

[dependencies]
# Internal dependencies
ai00-server = { path = "../ai00-server" }

# Tokenization
web-rwkv.workspace = true

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { workspace = true }
serde_json = "1"
toml = "0.8"

# Error handling
anyhow.workspace = true

# Shuffling
rand = "0.8"

# Progress
indicatif = "0.17"

# Terminal detection
atty = "0.2"

[dev-dependencies]
tempfile = "3"
